--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
 	<head>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+
+		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/jquery.pbshelf.css" />
 	</head>
 
