--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
 				<p>Apples to apples</p>
 			</div>	
 		</div>
-		
 
-		<script src="js/jquery-1.8.2.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 		<script src="js/jquery.easing.1.3.js"></script>
-		<script src="js/jquery.event.move.js"></script>
 		<script src="js/jquery.pbShelf.js"></script>
-		<script src="js/script.js"></script>
+		
+		<script type="jext/javascript">
+			$(function(){
+				$(".shelf").pbShelf();
+			});
+		</script>
 	</body>
 </html>
 
