--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-
-		<link rel="stylesheet" href="css/style.css" />
+		
 		<link rel="stylesheet" href="css/jquery.pbshelf.css" />
+		
+		<style>
+			body{
+				max-width:100%;
+				
+			}
+		</style>
+		
 	</head>
-
+	
+	
 	<body>
 		
 		<h1>Recently Added</h1>
