moving some things around

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 		<div class="shelf">
 			<div class="shelf-item">
 				<h2>First Picture</h2>
-				<img src="img/1.jpg" alt="First Image" />
+				<img src="1.jpg" alt="First Image" />
 				<p>We've got a picture of some junk</p>
 			</div>	
 			<div class="shelf-item">
 				<h2>Second Picture</h2>
-				<img src="img/2.jpg" alt="Second Image" />
+				<img src="2.jpg" alt="Second Image" />
 				<p>Flim Flam Floom</p>
 			</div>
 			<div class="shelf-item">
 				<h2>Third Picture</h2>
-				<img src="img/3.jpg" alt="Third Image" />
+				<img src="3.jpg" alt="Third Image" />
 				<p>Apples to apples</p>
 			</div>	
 		</div>
