--- a/demo/index.html
+++ b/demo/index.html
@@ -39,8 +39,7 @@
 		</div>
 
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script src="js/jquery.easing.1.3.js"></script>
-		<script src="js/jquery.pbShelf.js"></script>
+		<script src="../js/jquery.pbShelf.js"></script>
 		
 		<script type="jext/javascript">
 			$(function(){
